# coursework

./: .guron.conf  CMakeLists.txt  guron.sh  kill.sh
project/config/include/: config_file_exceptions.h  exceptions_config_file.h  main_server_settings.h  parse_functions.h  server_settings.h  server_settings_exceptions.h
project/config/src/: main_server_settings.cpp  parse_functions.cpp  server_settings.cpp
project/http/include/: http_base.h  http_date.h  http_defines.h  http_exceptions.h  http_file_types.h  http_handle.h  http_request.h  http_response.h
project/http/src/: http_base.cpp  http_date.cpp  http_handle.cpp  http_request.cpp  http_response.cpp
project/logs/include/: log.h
project/logs/src/: log.cpp
project/server/include/: server.h
project/server/src/: main.cpp  server.cpp
project/workers/include/: client_connection.h  worker_process.h
project/workers/src/: client_connection.cpp  worker_process.cpp
public/: 404.html
settings/: guron.conf
static/css/: style.css  tree-comments.css  var_style.css
static/html/: index.html
static/js/: jquery.sticky.min.js  kernel.js
